--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<meta name="msapplication-wide310x150logo" content="images/favicomatic/mstile-310x150.png" />
 		<meta name="msapplication-square310x310logo" content="images/favicomatic/mstile-310x310.png" />
 
-		<title>Daniel Garcia Meza</title>
+		<title>Daniel G</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
